# spyhole

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: pull-request.yml
src/: main.rs
static/: index.html  urls.html
static/assets/: styles.css
templates/: index.html  urls.html
