[package]
name = "spyhole"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.12.1"
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "json",
] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-postgres = "0.7.11"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace", "fs"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
